--- a/webapp/home/labs/proteomics/main.yml
+++ b/webapp/home/labs/proteomics/main.yml
@@ -1,3 +1,9 @@
+# Test this locally with:
+# http://127.0.0.1:8000/lab/export?content_root=http://localhost:8000/static/home/labs/proteomics/main.yml
+
+# Request this on site.usegalaxy.org.au with:
+# https://site.usegalaxy.org.au/lab/export?content_root=https://site.usegalaxy.org.au/static/home/labs/proteomics/main.yml
+
 # Use these variables in HTML templates like:
 # "Welcome to the Galaxy {{ site_name }} {{ lab_name }}"
 # To make the content more generic and reusable across sites
