--- a/webapp/home/labs/proteomics/conversion_modification.yml
+++ b/webapp/home/labs/proteomics/conversion_modification.yml
@@ -25,6 +25,14 @@ tabs:
               - brukertdf.d.tar
               - watersmasslynx.raw.tar
             label: Input MS data
+        outputs:
+          - datatypes:
+              - mz5
+              - mzML
+              - mzXML
+              - mgf
+              - ms2
+            label: Output MS data
         button_link: "{{ galaxy_base_url }}/root?tool_id=toolshed.g2.bx.psu.edu/repos/galaxyp/msconvert/msconvert/"
       - title_html: "<code>Thermo RAW file converter</code>"
         description_html: >
