--- a/webapp/home/labs/genome/annotation.yml
+++ b/webapp/home/labs/genome/annotation.yml
@@ -13,12 +13,12 @@ tabs:
             <br><br> The evidences can be transcript or protein sequences from the same (or closely related) organism. These sequences can come from public databases (like NR or GenBank) or from your own experimental data (transcriptome assembly from an RNASeq experiment for example). MAKER is also able to take into account repeated elements.
           </p>
         inputs:
-          - datatypes:
+          - label: Genome assembly
+            datatypes:
               - fasta
-            label: Genome assembly
-          - datatypes:
+          - label: Protein evidence (optional)
+            datatypes:
               - fasta
-            label: Protein evidence (optional)
         button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fiuc%2Fmaker%2Fmaker"
       - title_html: <code>Funannotate predict</code> - predicted gene annotations
         description_html: >
