Improve labs docs page

--- a/webapp/home/labs/genome/data.yml
+++ b/webapp/home/labs/genome/data.yml
@@ -15,7 +15,8 @@ tabs:
       - title_html: <code>FastQC</code> - sequence quality reports
         description_html: >
           <p>
-            Before using your sequencing data, it's important first ensure that the data quality is sufficient for your analysis.
+            Before using your sequencing data, it's important to ensure that
+            the data quality is sufficient for your analysis.
           </p>
         inputs:
           - datatypes:
