--- a/webapp/home/labs/genome/annotation.yml
+++ b/webapp/home/labs/genome/annotation.yml
@@ -88,6 +88,23 @@ tabs:
               - fasta
             label: Genome assembly
         button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fcrs4%2Fprokka%2Fprokka"
+        
+      - title_html: <code>FGenesH</code> - Genome annotation
+        description_html: >
+          <p>
+            <code>FGenesH</code> annotates an assembled genome and outputs a GFF3 file. There are several modules that do different things; search for FGENESH in the tool panel to see them. Note: please apply for access to this tool before use at [this link](https://site.usegalaxy.org.au/request/access/fgenesh). 
+          </p>
+        inputs:
+          - datatypes:
+              - fasta
+            label: Genome assembly
+          - datatypes:
+              - fasta
+            label: Repeat-masked (hard) genome assembly
+          - datatypes:
+              - .cdna, .pro, .dat
+            label: Optional files from the TSI Transcriptome Assembly workflow (See workflows tab)              
+        button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fcrs4%2Fprokka%2Fprokka"
 
   - id: workflows
     title: Workflows
