--- a/webapp/home/labs/genome/annotation.yml
+++ b/webapp/home/labs/genome/annotation.yml
@@ -104,7 +104,7 @@ tabs:
           - datatypes:
               - .cdna, .pro, .dat
             label: Optional files from the TSI Transcriptome Assembly workflow (See workflows tab)              
-        button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fcrs4%2Fprokka%2Fprokka"
+        button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=fgenesh_annotate&version=latest"
 
   - id: workflows
     title: Workflows
