--- a/webapp/home/labs/genome/annotation.yml
+++ b/webapp/home/labs/genome/annotation.yml
@@ -88,18 +88,18 @@ tabs:
               - fasta
             label: Genome assembly
         button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=toolshed.g2.bx.psu.edu%2Frepos%2Fcrs4%2Fprokka%2Fprokka"
-        
+
       - title_html: <code>FGenesH</code> - Genome annotation
         description_html: >
           <p>
             Annotate an assembled genome and output a GFF3 file. There are several modules that do different things - search for FGENESH in the tool panel to see them.
-            <p class="alert alert-warning">
-              Note: you must
-              <a href="https://site.usegalaxy.org.au/request/access/fgenesh" target="_blank">
-                apply for access
-              </a>
-              to this tool before use.
-            </p>
+          </p>
+          <p class="alert alert-warning">
+            Note: you must
+            <a href="https://site.usegalaxy.org.au/request/access/fgenesh" target="_blank">
+              apply for access
+            </a>
+            to this tool before use.
           </p>
         inputs:
           - datatypes:
@@ -108,11 +108,6 @@ tabs:
           - datatypes:
               - fasta
             label: Repeat-masked (hard) genome assembly
-          - datatypes:
-              - cdna
-              - pro
-              - dat
-            label: Optional files from the TSI Transcriptome Assembly workflow (See workflows tab)              
         button_link: "{{ galaxy_base_url }}/tool_runner?tool_id=fgenesh_annotate&version=latest"
 
   - id: workflows
@@ -279,16 +274,28 @@ tabs:
               description_html: >
                 <p>
                   Annotate the genome using outputs from the TSI transcriptome workflows.
+                <p>
+                <p class="alert alert-warning">
+                  Note: you must
+                  <a href="https://site.usegalaxy.org.au/request/access/fgenesh" target="_blank">
+                    apply for access
+                  </a>
+                  to this tool before use.
                 </p>
               inputs:
                 - datatypes:
                     - fasta
-                  label: Assembled genome <code>genome.fasta</code>
-                  label: Masked genome <code>masked_genome.fasta</code>
-                    - cdna
-                    - pro
-                    - dat
-                  label: Outputs from TSI convert formats workflow <code>sample.cdna</code>, <code>sample.pro</code>, <code>sample.dat</code>
+                  label: Assembled genome
+                - datatypes:
+                    - fasta
+                  label: Masked genome
+                - datatypes:
+                    - fasta
+                  label: >
+                    Outputs from TSI convert formats workflow
+                    (<code>*.cdna</code>,
+                    <code>*.pro</code>,
+                    <code>*.dat</code>)
               button_link: "{{ galaxy_base_url }}/workflows/trs_import?trs_server=workflowhub.eu&run_form=true&trs_id=881"
               view_link: https://workflowhub.eu/workflows/881
               view_tip: View in WorkflowHub
