--- a/webapp/home/labs/proteomics/dia_standardised_tools.yml
+++ b/webapp/home/labs/proteomics/dia_standardised_tools.yml
@@ -19,4 +19,25 @@ tabs:
         button_link: "{{ galaxy_base_url }}/root?tool_id=toolshed.g2.bx.psu.edu/repos/galaxyp/msstats/msstats/"
   - id: help
     title: Help
-    content: []
+    content:
+      - title_html: "Galaxy Australia support"
+        description_html: >
+          <p>
+            Any user of Galaxy Australia can request support through an online form.
+          </p>
+        button_link: "/request/support"
+        button_html: "Request support"
+      - title_html: "DIA Analysis using OpenSwathWorkflow"
+        description_html: >
+          <p>
+            Learn how to analyse HEK-Ecoli spike-in DIA data in Galaxy, understand DIA data principles and characteristics, and use OpenSwathworkflow to analyze HEK-Ecoli spike-in DIA data.
+          </p>
+        button_link: "https://usegalaxy.org.au/training-material/topics/proteomics/tutorials/DIA_Analysis_OSW/tutorial.html"
+        button_html: "Tutorial"
+      - title_html: "Library Generation for DIA Analysis"
+        description_html: >
+          <p>
+            Learn how to generate a spectral library from data dependent acquisition (DDA) MS data, understand DIA data principles and characteristics, and optimize and refine a spectral library for the analysis of DIA data.
+          </p>
+        button_link: "https://usegalaxy.org.au/training-material/topics/proteomics/tutorials/DIA_lib_OSW/tutorial.html"
+        button_html: "Tutorial"
